Update some projects

--- a/project/tinke/index.html
+++ b/project/tinke/index.html
@@ -15,7 +15,7 @@
   
     
   
-  <meta name="description" content="Editor and visor for files from Nintendo DS games.">
+  <meta name="description" content="Editor and visor for files from Nintendo DS games. Superseded by Yarhl.">
 
   
   <link rel="alternate" hreflang="en-us" href="/project/tinke/">
@@ -94,7 +94,7 @@
   <meta property="og:site_name" content="Pleotonic Engineering">
   <meta property="og:url" content="/project/tinke/">
   <meta property="og:title" content="Tinke | Pleotonic Engineering">
-  <meta property="og:description" content="Editor and visor for files from Nintendo DS games.">
+  <meta property="og:description" content="Editor and visor for files from Nintendo DS games. Superseded by Yarhl.">
   
   
     
