--- a/project/yarhl/index.html
+++ b/project/yarhl/index.html
@@ -15,7 +15,7 @@
   
     
   
-  <meta name="description" content="_Yet Another ROM Hacking Library (Yarhl)_ is a quality-focused library for text and image converters.">
+  <meta name="description" content="_Yet Another ROM Hacking Library (Yarhl)_ is a quality-focused library for file format converters.">
 
   
   <link rel="alternate" hreflang="en-us" href="/project/yarhl/">
@@ -94,7 +94,7 @@
   <meta property="og:site_name" content="Pleotonic Engineering">
   <meta property="og:url" content="/project/yarhl/">
   <meta property="og:title" content="Yarhl | Pleotonic Engineering">
-  <meta property="og:description" content="_Yet Another ROM Hacking Library (Yarhl)_ is a quality-focused library for text and image converters.">
+  <meta property="og:description" content="_Yet Another ROM Hacking Library (Yarhl)_ is a quality-focused library for file format converters.">
   
   
     
