--- a/404.html
+++ b/404.html
@@ -361,7 +361,7 @@
   </ul>
   
   <ul>
-    <li><a href="/project/robotic-arm/">Wall-E: Robotic Arm</a></li>
+    <li><a href="/project/yarhl/">Yarhl</a></li>
   </ul>
   
   
