--- a/project/airorom/index.html
+++ b/project/airorom/index.html
@@ -420,6 +420,12 @@
 
 <h1 id="data-protection-mechanisms-in-video-games">Data Protection Mechanisms in Video Games</h1>
 
+<div class="alert alert-note">
+  <p>Grade: 9.9 / 10</p>
+
+</div>
+
+
 <p>Electrical Engineering Bachelor dissertation.
 I researched different video games of Nintendo DS to find out how they were
 protecting different sensitive content like text, video and audio to avoid
