--- a/project/yarhl/index.html
+++ b/project/yarhl/index.html
@@ -416,7 +416,82 @@
     
 
     <div class="article-style" itemprop="articleBody">
-      <p><a href="https://github.com/SceneGate/yarhl" target="_blank">Website link</a></p>
+      <table>
+<thead>
+<tr>
+<th>Website</th>
+<th>Source code</th>
+<th>Documentation</th>
+</tr>
+</thead>
+
+<tbody>
+<tr>
+<td><a href="https://scenegate.github.io/Yarhl/" target="_blank"><strong>Here</strong></a></td>
+<td><a href="https://github.com/SceneGate/yarhl" target="_blank"><strong>GitHub</strong></a></td>
+<td><a href="https://scenegate.github.io/Yarhl/api/Yarhl.html" target="_blank"><strong>Here</strong></a></td>
+</tr>
+</tbody>
+</table>
+
+<p><strong>Yarhl</strong> is a library for <em>ROM Hacking</em> and fan-translation projects.
+It provides a virtual file system, file format and format conversion features
+and plugin support. It&rsquo;s built in C# / .NET and works in Windows, Linux and
+Mac OS X.</p>
+
+<table>
+<thead>
+<tr>
+<th></th>
+<th>Linux &amp; Mac OS X</th>
+<th>Windows</th>
+</tr>
+</thead>
+
+<tbody>
+<tr>
+<td><strong>Build &amp; Test</strong></td>
+<td><a href="https://travis-ci.org/SceneGate/Yarhl" target="_blank"><img src="https://travis-ci.org/SceneGate/Yarhl.svg?branch=master" alt="Travis Build Status" /></a> <a href="https://travis-ci.org/SceneGate/Yarhl/builds" target="_blank"><img src="https://buildstats.info/travisci/chart/SceneGate/Yarhl" alt="Travis Build history" /></a></td>
+<td><a href="https://ci.appveyor.com/project/pleonex/libgame/branch/master" target="_blank"><img src="https://ci.appveyor.com/api/projects/status/hjgmge090s7962q6/branch/master?svg=true" alt="AppVeyor Build status" /></a> <a href="https://ci.appveyor.com/project/pleonex/libgame/history" target="_blank"><img src="https://buildstats.info/appveyor/chart/pleonex/libgame" alt="AppVeyor Build history" /></a></td>
+</tr>
+</tbody>
+</table>
+
+<table>
+<thead>
+<tr>
+<th></th>
+<th></th>
+</tr>
+</thead>
+
+<tbody>
+<tr>
+<td>Quality report</td>
+<td><a href="https://sonarcloud.io/dashboard?id=yarhl" target="_blank"><img src="https://sonarcloud.io/api/project_badges/measure?project=yarhl&amp;metric=alert_status" alt="Sonar Gate" /></a></td>
+</tr>
+
+<tr>
+<td><strong>Coverage</strong></td>
+<td><a href="https://coveralls.io/github/SceneGate/Yarhl?branch=master" target="_blank"><img src="https://coveralls.io/repos/github/SceneGate/Yarhl/badge.svg?branch=master" alt="Coveralls" /></a></td>
+</tr>
+
+<tr>
+<td><strong>Quality Reports</strong></td>
+<td><a href="https://sonarcloud.io/dashboard?id=yarhl" target="_blank"><img src="https://sonarcloud.io/api/project_badges/measure?project=yarhl&amp;metric=alert_status" alt="SonarCloud" /></a></td>
+</tr>
+
+<tr>
+<td><strong>Quality Details</strong></td>
+<td><a href="https://sonarcloud.io/dashboard?id=yarhl" target="_blank"><img src="https://sonarcloud.io/api/project_badges/measure?project=yarhl&amp;metric=sqale_rating" alt="Maintainability" /></a> <a href="https://sonarcloud.io/dashboard?id=yarhl" target="_blank"><img src="https://sonarcloud.io/api/project_badges/measure?project=yarhl&amp;metric=bugs" alt="Bugs" /></a> <a href="https://sonarcloud.io/dashboard?id=yarhl" target="_blank"><img src="https://sonarcloud.io/api/project_badges/measure?project=yarhl&amp;metric=code_smells" alt="Code smells" /></a> <a href="https://sonarcloud.io/dashboard?id=yarhl" target="_blank"><img src="https://sonarcloud.io/api/project_badges/measure?project=yarhl&amp;metric=duplicated_lines_density" alt="Duplicated lines" /></a></td>
+</tr>
+
+<tr>
+<td><strong>Code Stats</strong></td>
+<td><a href="https://sonarcloud.io/dashboard?id=yarhl" target="_blank"><img src="https://sonarcloud.io/api/project_badges/measure?project=yarhl&amp;metric=ncloc" alt="Lines of code" /></a></td>
+</tr>
+</tbody>
+</table>
 
     </div>
 
