Fix typos and update CV

--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@ projects in <a href="https://github.com/pleonex" target="_blank"><strong>Github 
             <div class="card-text"><p>Expertise in <strong>RTI Connext DDDS</strong>: a technology for the Industrial
   Internet of Things (IIoT).</p>
 
-<p>Develpment responsabilities include:</p>
+<p>Development responsibilities include:</p>
 
 <ul>
 <li>Lead developer of the <a href="https://github.com/rticommunity/rticonnextdds-connector-cs" target="_blank">C# API for RTI Connector</a>.</li>
@@ -581,16 +581,18 @@ projects in <a href="https://github.com/pleonex" target="_blank"><strong>Github 
 <li>C# General Language Knowledge Point of Contact.</li>
 <li>Developer of a new build system: CMake, Gradle, Python and Jenkins.
 Support for multiple platforms and languages.</li>
-<li>OMG IDL to C# mapping specifiction.</li>
+<li>OMG IDL to C# mapping specification.</li>
+<li>A couple of customer on-site visits with the Professional Services Team
+to provide design knowledge and support.</li>
 </ul>
 
 <p><br/>
-  For two years, I worked with the support team.</p>
+  For two years, I worked with the Support Team. My responsibilities were:</p>
 
 <ul>
 <li>Answer technical questions.</li>
 <li>Debug issues on-site and in remote video-calls.</li>
-<li>Handle of critical escalted cases.</li>
+<li>Handle of critical escalated cases.</li>
 <li>Make and release patch releases.
 <br /></li>
 </ul>
