--- a/project/tinke/index.html
+++ b/project/tinke/index.html
@@ -455,7 +455,7 @@ Furthermore it works with plugins made in NET Framework languages
 <li>Edit a lot of image files from BMP files (NCLR, NCGR, NSCR, NCER), audio files from WAV (SWAV, SWAR, STRM) and fonts (NFTR).</li>
 <li>Hexadecimal visor.</li>
 <li>Change the content of the files and save the new ROM.</li>
-<li>Multilanguage support.</li>
+<li>Translated to multiple languages.</li>
 </ul>
 
 
